# template-ICM-D

./: CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  test.ipynb
.claude/: settings.json  settings.local.json
.claude/skills/: README.md
.claude/skills/mcm-academic-writer/: SKILL.md
.claude/skills/mcm-academic-writer/assets/: latex-template.tex
.claude/skills/mcm-icm-data-process/: SKILL.md
.claude/skills/mcm-icm-problem-solver/: SKILL.md
.claude/skills/mcm-model-architect/: SKILL.md
.claude/skills/mcm-model-architect/references/: model-patterns.md
.claude/skills/mcm-problem-analyst/: SKILL.md
.claude/skills/mcm-problem-analyst/references/: problem-types.md
.claude/skills/mcm-solver-engineer/: SKILL.md
.claude/skills/mcm-solver-engineer/scripts/: genetic_algorithm.py  simulated_annealing.py
.claude/skills/mcm-validation-analyst/: SKILL.md
.claude/skills/mcm-validation-analyst/scripts/: sensitivity_analysis.py
chinese-prompts/: 数据预处理.md
